# eFootball-Patch-Manager

./: .gitignore  CONTRIBUTING.md  README.md  build.bat  eFootball_PatchManager.spec  main.py  pyproject.toml
.claude/: settings.local.json
installer/: setup.iss
patch_manager/: config.py  constants.py  fs_ops.py  installer.py  logger.py
patch_manager/ui/: app.py  tab_accueil.py  tab_history.py  tab_install.py  tab_log.py  tab_modules.py  tab_param.py  tab_uninst.py
tests/: test_config.py  test_installer.py
