[project]
name = "efootball-patch-manager"
version = "1.0.0"
description = "Outil de gestion des patches pour eFootball 2026"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "darkdetect>=0.8.0",
    "py7zr>=0.20",
    "rarfile>=4.0",
]

[project.scripts]
patch-manager = "main:run"

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
